<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">‌‌Bop</string>
    <string name="started">GET STARTED</string>
    <string name="Justenjoy">Just enjoy</string>
    <string name="welcome">Welcome to Bop</string>
    <string name="Mylibrary">Now Playing</string>
    <string name="playlists">Playlists</string>
    <string name="artists">Artists</string>
    <string name="albums">Albums</string>
    <string name="songs">Songs</string>
    <string name="feedback">Feedback</string>
    <string name="x_has_been_set_as_ringtone">Set %1$s as your ringtone.</string>
    <string name="welcome_to_bop">a beautiful music player for Android.</string>
    <!--  TODO: Remove or change this placeholder text -->

    <string name="error_playing_track">Error Playing track</string>

    <string name="playlist_last_added">Last Added</string>
    <string name="playlist_recently_played">Recently Played</string>
    <string name="load_artist_fail">load artist error</string>
    plurals.xml
    <string name="library">Library</string>
    <string name="search">Search</string>
    <string name="search_library">Search Library</string>
    <string name="play_shuffle">Shuffle all</string>
    <string name="play_all">Play all</string>
    <string name="equalizer">Equalizer</string>
    <string name="folder">Folders</string>
    <string name="durationformatshort" translatable="false"><xliff:g id="format">%2$d:%3$02d</xliff:g></string>
    <string name="durationformatlong" translatable="false"><xliff:g id="format">%1$d:%2$02d:%3$02d</xliff:g></string>

    <string name="delete_folder">Delete Folder</string>
    <string name="play_next">Play next</string>
    <string name="add_to_queue">Add to queue</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="content_empty_default">Nothing here</string>
    <string name="remove_favorite_success">Remove Favourite Song Success</string>
    <string name="create_new_playlist">Create new playlist</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="change">Change</string>
    <string name="sleep_timer">Sleep timer</string>
    <string name="sleep_timer_set">Sleep timer set for %d minutes from now.</string>
    <string name="cancel_current_timer">Cancel current timer</string>
    <string name="sleep_timer_canceled">Sleep timer canceled.</string>
    <string name="action_sleep_timer">Sleep timer</string>
    <string name="action_set">Set</string>
    <string name="shuffle">Shuffle</string>
    <string name="repeat">Repeat</string>
    <string name="playlist_name">Enter playlist name</string>
    <string name="set_play_next_success">set play next success</string>
    <string name="create_playlist_success">create playlist success</string>
    <string name="create_playlist_fail">create playlist fail</string>
    <string name="delete_song">Delete song</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="rename">Rename</string>
    <string name="rename_playlist">Rename</string>
    <string name="rename_playlist_success">Rename Success</string>
    <string name="delete_playlist">Delete playlist</string>
    <string name="delete_playlist_success">Delete Playlist Success</string>
    <string name="delete_playlist_song">Delete Song From Playlist</string>
    <string name="delete_song_favourate">Delete Song From Favourate</string>
    <string name="delete_song_recentlyplay">Delete Song From Recently Play</string>
    <string name="remove_recentlyplay_success">Delete Song From Recentyl Play Success</string>
    <string name="count_song"><xliff:g id="count">%d</xliff:g> song</string>
    <string name="count_songs"><xliff:g id="count">%d</xliff:g> songs</string>
    <string name="count_album"><xliff:g id="count">%d</xliff:g> album</string>
    <string name="count_albums"><xliff:g id="count">%d</xliff:g> albums</string>

    <string name="number_song_add_queue"><xliff:g example="1" id="number">%d</xliff:g> song added to the queue.</string>
    <string name="number_songs_add_queue"><xliff:g example="1" id="number">%d</xliff:g> songs added to the queue.</string>
    <string name="number_song_add_playlist"><xliff:g example="1" id="number">%d</xliff:g> song added to playlist.</string>
    <string name="number_songs_add_playlist"><xliff:g example="1" id="number">%d</xliff:g> songs added to playlist.</string>
    <string name="number_song_delete"><xliff:g example="1" id="songs_to_delete">%d</xliff:g> song was deleted.</string>
    <string name="number_songs_delete"><xliff:g id="songs_to_delete">%d</xliff:g> songs were deleted.</string>
</resources>
