<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nowPlaying"
        android:icon="@drawable/ic_open_in_browser_black_24dp"
        android:title="@string/Mylibrary" />
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        />
    <item
        android:id="@+id/artists"
        android:icon="@drawable/ic_account_circle"
        android:title="@string/artists" />
    <item
        android:id="@+id/albums"
        android:icon="@drawable/ic_album"
        android:title="@string/albums" />
    <item
        android:id="@+id/songs"
        android:icon="@drawable/ic_music_note"
        android:title="@string/songs" />
    <item
        android:id="@+id/playlists"
        android:icon="@drawable/ic_playlist_add"
        android:title="@string/playlists" />
<item
        android:id="@+id/equalizer"
        android:icon="@drawable/ic_equalizer_black_18dp"
        android:title="@string/equalizer" />

    <item
        android:id="@+id/feedback"
        android:icon="@drawable/ic_feedback"
        android:title="@string/feedback"
        />

</menu>
